feat: Chatbot replies based on memory - Displaying code in markdown

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,12 @@
         <link rel="icon" href="%PUBLIC_URL%/logo192.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <meta
+            name="description"
+            content="ChatApp is a real-time messaging platform with private and group chats, friend management, emoji reactions, and secure encrypted messages. Built with React, Node.js, Socket.IO, and PostgreSQL."
+        />
         <meta name="google-site-verification" content="2LbYuqY9l4Jc6JN-E5E_vs5EXe3EHtGhg02YNzxUQyA" />
-        <title>Chat App</title>
+        <title>ChatApp</title>
     </head>
     <body>
         <div id="root"></div>
